Correcciones primera entrega - div/section/nav/vinculos

--- a/index.html
+++ b/index.html
@@ -9,42 +9,42 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header>
+    <nav>
       <img class="logo" src="./images/logo.png" />
       <ul class="menu">
         <li class="inicio"><a class="links" href="index.html">INICIO</a></li>
-        <li><a class="links" href="../pages/quiensoy.html">SOBRE MÍ</a></li>
-        <li><a class="links" href="../pages/terapias.html">TERAPIAS</a></li>
-        <li><a class="links" href="../pages/agenda.html">AGENDA</a></li>
-        <li><a class="links" href="../pages/contacto.html">CONTACTO</a></li>
+        <li><a class="links" href="./pages/quiensoy.html">SOBRE MÍ</a></li>
+        <li><a class="links" href="./pages/terapias.html">TERAPIAS</a></li>
+        <li><a class="links" href="./pages/agenda.html">AGENDA</a></li>
+        <li><a class="links" href="./pages/contacto.html">CONTACTO</a></li>
       </ul>
-    </header>
+    </nav>
     <main>
-      <section class="seccion1">
+      <div class="seccion1">
           <h1 class="divtext_titulo">Refugio Lunar - Un lugar para sanar</h1>
         </div>
-      </section>
+      </div>
       <section class="seccion2">
         <div class="tarjetas">
-          <img class="card_image" src="./images/astral.webp" alt="">
+          <img class="card_image" src="./images/astral.webp" alt="Carta-astral">
           <h2 class="card_tittle">Carta astral</h2>
           <p class="card_text">Lorem, ipsum dolor sit am  et consectetur adipisicing elit. Nemo nulla ullam recurs</p>
           <a href="./pages/terapias.html">Más información</a>
         </div>
         <div class="tarjetas">
-          <img class="card_image" src="./images/chakras.webp" alt="">
+          <img class="card_image" src="./images/chakras.webp" alt="Alineacion-chakras">
           <h2 class="card_tittle"> Alineación de Chakras</h2>
           <p class="card_text">Lorem, ipsum dolor sit am  et consectetur adipisicing elit. Nemo nulla ullam recurs</p>
           <a href="./pages/terapias.html">Más información</a>
         </div>
         <div class="tarjetas">
-          <img class="card_image" src="./images/tarot.webp" alt="">
+          <img class="card_image" src="./images/tarot.webp" alt="Tarot">
           <h2 class="card_tittle">Tarot</h2>
           <p class="card_text">Lorem, ipsum dolor sit am  et consectetur adipisicing elit. Nemo nulla ullam recurs</p>
           <a href="./pages/terapias.html">Más información</a>
         </div>
         <div class="tarjetas">
-          <img class="card_image" src="./images/cfamiliar.webp" alt="">
+          <img class="card_image" src="./images/cfamiliar.webp" alt="Constelacion-familiar">
           <h2 class="card_tittle">Constelación Familiar</h2>
           <p class="card_text">Lorem, ipsum dolor sit am  et consectetur adipisicing elit. Nemo nulla ullam recurs</p>
           <a class="linkinfo" href="./pages/terapias.html">Más información</a>
