--- a/pages/terapias.html
+++ b/pages/terapias.html
@@ -10,16 +10,16 @@
   </head>
 
   <body>
-    <header>
+    <nav>
       <img class="logo" src="../images/logo.png" />
       <ul class="menu">
         <li class="inicio"><a class="links" href="../index.html">INICIO</a></li>
-        <li> <a class="links" href="../pages/quiensoy.html">SOBRE MÍ</a></li>
+        <li> <a class="links" href="./quiensoy.html">SOBRE MÍ</a></li>
         <li><a class="links" href="./terapias.html">TERAPIAS</a></li>
-        <li><a class="links" href="../pages/agenda.html">AGENDA</a></li>
-        <li><a class="links" href="../pages/contacto.html">CONTACTO</a></li>
+        <li><a class="links" href="./agenda.html">AGENDA</a></li>
+        <li><a class="links" href="./contacto.html">CONTACTO</a></li>
       </ul>
-    </header>
+    </nav>
 
     <main>
       <div>
