--- a/pages/terapias.html
+++ b/pages/terapias.html
@@ -13,8 +13,8 @@
     <nav>
       <img class="logo" src="../images/logo.png" />
       <ul class="menu">
-        <li class="inicio"><a class="links" href="../index.html">INICIO</a></li>
-        <li> <a class="links" href="./quiensoy.html">SOBRE MÍ</a></li>
+        <li><a class="inicio" href="../index.html">INICIO</a></li>
+        <li><a class="links" href="./quiensoy.html">SOBRE MÍ</a></li>
         <li><a class="links" href="./terapias.html">TERAPIAS</a></li>
         <li><a class="links" href="./agenda.html">AGENDA</a></li>
         <li><a class="links" href="./contacto.html">CONTACTO</a></li>
@@ -22,61 +22,80 @@
     </nav>
 
     <main>
-      <div>
-        <h2>Terapias</h2>
-    <section>
-      <div>
-        <img src="#" alt="">
-        <img src="#" alt="">
-      </div>
-      <div>
-        <h3>Alineación de chakras</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsam, voluptates ipsa     quasi rerum alias iusto tenetur perferendis rem earum fugit iste placeat autem expedita officia.
-        </p>
-        <input type="button" value="">
-      </div>
-    </section>
-    <section>
-      <div>
-        <img src="#" alt="">
-        <img src="#" alt="">
-      </div>
-      <div>
-        <h3>Constelación Familiar</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsam, voluptates ipsa     quasi rerum alias iusto tenetur perferendis rem earum fugit iste placeat autem expedita officia.
-        </p>
-        <input type="button" value="">
-      </div>
-    </section>
-    <section>
-      <div>
-        <img src="#" alt="">
-        <img src="#" alt="">
-      </div>
-      <div>
-        <h3>Carta Astral</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsam, voluptates ipsa     quasi rerum alias iusto tenetur perferendis rem earum fugit iste placeat autem expedita officia.
-        </p>
-        <input type="button" value="">
-      </div>
-    </section>
-    <section>
-      <div>
-        <img src="#" alt="">
-        <img src="#" alt="">
-      </div>
-      <div>
-        <h3>Reiki</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsam, voluptates ipsa     quasi rerum alias iusto tenetur perferendis rem earum fugit iste placeat autem expedita officia.
-        </p>
-        <input type="button" value="">
-      </div>
-    </section> 
-    </main>
+      <section class="grid1">
+        <div class="grid1__img1"><img src="../images/castral1.jpg" alt=""></div>
+        <div class="grid1__img2"><img src="../images/castral2.jpg" alt=""></div>
+        <div class="grid1__titulo">
+          <h2 class="titulo-terapia">Carta astral</h2>
+        </div>
+        <div class="grid1__parrafo">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure voluptatibus qui quae non aperiam ipsum laborum explicabo laudantium, minus, consequatur libero magnam exercitationem. Odio harum ab dolor quis expedita pariatur.
+          Omnis tempora atque quisquam voluptates distinctio quod suscipit neque quaerat accusamus doloribus error saepe, quas veritatis unde recusandae rerum porro earum explicabo, necessitatibus beatae alias similique harum debitis nesciunt? Nihil?
+          Mollitia, et ipsam velit aperiam minima accusamus dolorum delectus eos similique atque a quo cupiditate vero quam soluta rerum illo voluptas, alias eaque unde! Necessitatibus tenetur doloribus ab itaque laboriosam!
+          </p>
+        </div> 
+     </section>
 
+     <section class="grid2">
+       <div class="grid2__img1"><img src="../images/castral1.jpg" alt=""></div>
+       <div class="grid2__img2"><img src="../images/castral2.jpg" alt=""></div>
+       <div class="grid2__titulo">
+         <h2 class="titulo-terapia">Carta astral</h2>
+       </div>
+       <div class="grid2__parrafo">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure voluptatibus qui quae non     aperiam ipsum laborum explicabo laudantium, minus, consequatur libero magnam exercitationem. Odio harum ab dolor quis expedita pariatur.
+            Omnis tempora atque quisquam voluptates distinctio quod suscipit neque quaerat accusamus doloribus error saepe, quas veritatis unde recusandae rerum porro earum explicabo, necessitatibus beatae alias similique harum debitis nesciunt? Nihil?
+            Mollitia, et ipsam velit aperiam minima accusamus dolorum delectus eos similique atque a quo cupiditate vero quam soluta rerum illo voluptas, alias eaque unde! Necessitatibus tenetur doloribus ab itaque laboriosam!
+            </p>
+      </div>    
+     </section>
+
+     <section class="grid1">
+      <div class="grid1__img1"><img src="../images/castral1.jpg" alt=""></div>
+      <div class="grid1__img2"><img src="../images/castral2.jpg" alt=""></div>
+      <div class="grid1__titulo">
+        <h2 class="titulo-terapia">Carta astral</h2>
+      </div>
+      <div class="grid1__parrafo">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure voluptatibus qui quae non aperiam ipsum laborum explicabo laudantium, minus, consequatur libero magnam exercitationem. Odio harum ab dolor quis expedita pariatur.
+        Omnis tempora atque quisquam voluptates distinctio quod suscipit neque quaerat accusamus doloribus error saepe, quas veritatis unde recusandae rerum porro earum explicabo, necessitatibus beatae alias similique harum debitis nesciunt? Nihil?
+        Mollitia, et ipsam velit aperiam minima accusamus dolorum delectus eos similique atque a quo cupiditate vero quam soluta rerum illo voluptas, alias eaque unde! Necessitatibus tenetur doloribus ab itaque laboriosam!
+        </p>
+      </div> 
+   </section>
+
+   <section class="grid2">
+     <div class="grid2__img1"><img src="../images/castral1.jpg" alt=""></div>
+     <div class="grid2__img2"><img src="../images/castral2.jpg" alt=""></div>
+     <div class="grid2__titulo">
+       <h2 class="titulo-terapia">Carta astral</h2>
+     </div>
+     <div class="grid2__parrafo">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure voluptatibus qui quae non     aperiam ipsum laborum explicabo laudantium, minus, consequatur libero magnam exercitationem. Odio harum ab dolor quis expedita pariatur.
+          Omnis tempora atque quisquam voluptates distinctio quod suscipit neque quaerat accusamus doloribus error saepe, quas veritatis unde recusandae rerum porro earum explicabo, necessitatibus beatae alias similique harum debitis nesciunt? Nihil?
+          Mollitia, et ipsam velit aperiam minima accusamus dolorum delectus eos similique atque a quo cupiditate vero quam soluta rerum illo voluptas, alias eaque unde! Necessitatibus tenetur doloribus ab itaque laboriosam!
+          </p>
+    </div>    
+   </section>
+    </main>
     <footer>
       <img class="logo" src="../images/logo.png" />
-      <p>@CopyRight - Todos los derechos reservados a Refugio Lunar</p>
+      <div>
+        <h3>Contacto</h3>
+        <li>Instagram</li>
+        <li>Facebook</li>
+        <li>Correo</li>
+      </div>
+      <div>
+        <h3>Terapias</h3>
+        <li>Alineación de chakras</li>
+        <li>Carta Astral</li>
+        <li>Constelaciones Familiares</li>
+        <li>Tarot</li>
+      </div>      
+      <p class="derechos">
+        @CopyRight - Todos los derechos reservados a Refugio Lunar
+      </p>
     </footer>
   </body>
 </html>
