--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -12,15 +12,14 @@
   <body>
     <nav>
       <img class="logo" src="../images/logo.png" />
-        <ul class="menu">
-            <li class="inicio"><a class="links" href="../index.html">INICIO</a></li>
-            <li><a class="links" href="./quiensoy.html">SOBRE MÍ</a></li>
-            <li><a class="links" href="./terapias.html">TERAPIAS</a></li>
-            <li><a class="links" href="./agenda.html">AGENDA</a></li>
-            <li><a class="links" href="./contacto.html">CONTACTO</a></li>
-        </ul>
+      <ul class="menu">
+        <li><a class="inicio" href="../index.html">INICIO</a></li>
+        <li><a class="links" href="./quiensoy.html">SOBRE MÍ</a></li>
+        <li><a class="links" href="./terapias.html">TERAPIAS</a></li>
+        <li><a class="links" href="./agenda.html">AGENDA</a></li>
+        <li><a class="links" href="./contacto.html">CONTACTO</a></li>
+      </ul>
     </nav>
-
     <main>
       <div>
         <img src="../images/terapeuta.webp">
@@ -36,8 +35,22 @@
 
     <footer>
       <img class="logo" src="../images/logo.png" />
-      <p>@CopyRight - Todos los derechos reservados a Refugio Lunar</p>
-      <p>Página diseñada por Gabo Desing</p>
+      <div>
+        <h3>Contacto</h3>
+        <li>Instagram</li>
+        <li>Facebook</li>
+        <li>Correo</li>
+      </div>
+      <div>
+        <h3>Terapias</h3>
+        <li>Alineación de chakras</li>
+        <li>Carta Astral</li>
+        <li>Constelaciones Familiares</li>
+        <li>Tarot</li>
+      </div>      
+      <p class="derechos">
+        @CopyRight - Todos los derechos reservados a Refugio Lunar
+      </p>
     </footer>
   </body>
 </html>
