--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>regufiolunar.cl | Un lugar para sanar</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -23,15 +24,33 @@
     <main>
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./images/fondo1.jpeg" class="d-block w-100">
+
+          <div class="carousel-item active d-item">
+              <img src="./images/fondo1.jpeg" class="d-block w-100">
+          <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
+            <h1 class="subtitulo">Refugio Lunar</h1>
+            <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, provident facilis rerum, sed, est delectus nulla doloremque fugit non iste quisquam fugiat adipisci hic ex? Officia nesciunt neque deserunt repellendus?</p>
           </div>
+          </div>
+
           <div class="carousel-item">
             <img src="./images/fondo2.jpeg" class="d-block w-100">
+            <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
+              <h1 class="display-1 text-capitalize subtitulo">Terapias</h1>
+              <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, provident facilis rerum, sed, est delectus nulla doloremque fugit non iste quisquam fugiat adipisci hic ex? Officia nesciunt neque deserunt repellendus?</p>
+              <button type="button" class="btn btn-light">Ir</button>
+            </div>
           </div>
+
           <div class="carousel-item">
             <img src="./images/fondo3.jpeg" class="d-block w-100">
+            <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
+              <h1 class="display-1 text-capitalize subtitulo">Contacto</h1>
+              <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, provident facilis rerum, sed, est delectus nulla doloremque fugit non iste quisquam fugiat adipisci hic ex? Officia nesciunt neque deserunt repellendus?</p>
+              <button type="button" class="btn btn-light">Ir</button>
+            </div>
           </div>
+
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
