--- a/pages/terapias.html
+++ b/pages/terapias.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>regufiolunar.cl | Un lugar para sanar</title>
-    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css" />
   </head>
 
@@ -35,10 +37,9 @@
           </p>
         </div> 
      </section>
-
      <section class="grid2">
-       <div class="grid2__img1"><img src="../images/castral1.jpg" alt=""></div>
-       <div class="grid2__img2"><img src="../images/castral2.jpg" alt=""></div>
+       <div class="grid2__img1"><img src="../images/cfamiliar1.jpg" alt=""></div>
+       <div class="grid2__img2"><img src="../images/cfamiliar2.jpg" alt=""></div>
        <div class="grid2__titulo">
          <h2 class="titulo-terapia">Carta astral</h2>
        </div>
@@ -49,10 +50,9 @@
             </p>
       </div>    
      </section>
-
-     <section class="grid1">
-      <div class="grid1__img1"><img src="../images/castral1.jpg" alt=""></div>
-      <div class="grid1__img2"><img src="../images/castral2.jpg" alt=""></div>
+    <section class="grid1">
+      <div class="grid1__img1"><img src="../images/chakras1.jpg" alt=""></div>
+      <div class="grid1__img2"><img src="../images/chakras2.jpg" alt=""></div>
       <div class="grid1__titulo">
         <h2 class="titulo-terapia">Carta astral</h2>
       </div>
@@ -63,7 +63,6 @@
         </p>
       </div> 
    </section>
-
    <section class="grid2">
      <div class="grid2__img1"><img src="../images/castral1.jpg" alt=""></div>
      <div class="grid2__img2"><img src="../images/castral2.jpg" alt=""></div>
@@ -97,5 +96,6 @@
         @CopyRight - Todos los derechos reservados a Refugio Lunar
       </p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
