Crear transiciones y avance con diseño responsive para la pagina terapias

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   </head>
   <body>
     <nav>
-      <img class="logo" src="./images/logo.png" />
+      <img class="logo rotate-vert-center" src="./images/logo.png" />
       <ul class="menu">
-        <li><a class="inicio" href="index.html">INICIO</a></li>
-        <li><a class="links" href="./pages/quiensoy.html">SOBRE MÍ</a></li>
-        <li><a class="links" href="./pages/terapias.html">TERAPIAS</a></li>
-        <li><a class="links" href="./pages/agenda.html">AGENDA</a></li>
-        <li><a class="links" href="./pages/contacto.html">CONTACTO</a></li>
+        <li class="translate"><a class="inicio" href="index.html">INICIO</a></li>
+        <li class="translate"><a class="links" href="./pages/quiensoy.html">SOBRE MÍ</a></li>
+        <li class="translate"><a class="links" href="./pages/terapias.html">TERAPIAS</a></li>
+        <li class="translate"><a class="links" href="./pages/agenda.html">AGENDA</a></li>
+        <li class="translate"><a class="links" href="./pages/contacto.html">CONTACTO</a></li>
       </ul>
     </nav>
     <main>
@@ -28,7 +28,7 @@
           <div class="carousel-item active d-item">
               <img src="./images/fondo1.jpeg" class="d-block w-100">
           <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
-            <h1 class="subtitulo">Refugio Lunar</h1>
+            <h1 class="subtitulo translate">Refugio Lunar</h1>
             <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, provident facilis rerum, sed, est delectus nulla doloremque fugit non iste quisquam fugiat adipisci hic ex? Officia nesciunt neque deserunt repellendus?</p>
           </div>
           </div>
@@ -36,7 +36,7 @@
           <div class="carousel-item">
             <img src="./images/fondo2.jpeg" class="d-block w-100">
             <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
-              <h1 class="display-1 text-capitalize subtitulo">Terapias</h1>
+              <h1 class="display-1 text-capitalize subtitulo translate">Terapias</h1>
               <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, provident facilis rerum, sed, est delectus nulla doloremque fugit non iste quisquam fugiat adipisci hic ex? Officia nesciunt neque deserunt repellendus?</p>
               <button type="button" class="btn btn-light">Ir</button>
             </div>
@@ -45,7 +45,7 @@
           <div class="carousel-item">
             <img src="./images/fondo3.jpeg" class="d-block w-100">
             <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
-              <h1 class="display-1 text-capitalize subtitulo">Contacto</h1>
+              <h1 class="display-1 text-capitalize subtitulo translate">Contacto</h1>
               <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, provident facilis rerum, sed, est delectus nulla doloremque fugit non iste quisquam fugiat adipisci hic ex? Officia nesciunt neque deserunt repellendus?</p>
               <button type="button" class="btn btn-light">Ir</button>
             </div>
