--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -13,18 +13,18 @@
 
   <body>
     <nav>
-      <img class="logo" src="../images/logo.png" />
+      <img class="logo rotate-vert-center" src="../images/logo.png" />
       <ul class="menu">
-        <li><a class="inicio" href="../index.html">INICIO</a></li>
-        <li><a class="links" href="./quiensoy.html">SOBRE MÍ</a></li>
-        <li><a class="links" href="./terapias.html">TERAPIAS</a></li>
-        <li><a class="links" href="./agenda.html">AGENDA</a></li>
-        <li><a class="links" href="./contacto.html">CONTACTO</a></li>
+        <li class="translate"><a class="inicio" href="../index.html">INICIO</a></li>
+        <li class="translate"><a class="links" href="./quiensoy.html">SOBRE MÍ</a></li>
+        <li class="translate"><a class="links" href="./terapias.html">TERAPIAS</a></li>
+        <li class="translate"><a class="links" href="./agenda.html">AGENDA</a></li>
+        <li class="translate"><a class="links" href="./contacto.html">CONTACTO</a></li>
       </ul>
     </nav>
 
     <footer>
-      <img class="logo" src="../images/logo.png" />
+      <img class="logo rotate-vert-center" src="../images/logo.png" />
       <div>
         <h3>Contacto</h3>
         <li>Instagram</li>
