--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -13,13 +13,13 @@
 
   <body>
     <nav>
-      <img class="logo" src="../images/logo.png" />
+      <img class="logo rotate-vert-center" src="../images/logo.png" />
       <ul class="menu">
-        <li><a class="inicio" href="../index.html">INICIO</a></li>
-        <li><a class="links" href="./quiensoy.html">SOBRE MÍ</a></li>
-        <li><a class="links" href="./terapias.html">TERAPIAS</a></li>
-        <li><a class="links" href="./agenda.html">AGENDA</a></li>
-        <li><a class="links" href="./contacto.html">CONTACTO</a></li>
+        <li class="translate"><a class="inicio" href="../index.html">INICIO</a></li>
+        <li class="translate"><a class="links" href="./quiensoy.html">SOBRE MÍ</a></li>
+        <li class="translate"><a class="links" href="./terapias.html">TERAPIAS</a></li>
+        <li class="translate"><a class="links" href="./agenda.html">AGENDA</a></li>
+        <li class="translate"><a class="links" href="./contacto.html">CONTACTO</a></li>
       </ul>
     </nav>
     <main>
@@ -27,16 +27,17 @@
         <img src="../images/terapeuta.webp">
       </div>
       <div>
-        <h2>Sobre mí...</h2>
-        <h3>Esto es un titulo h3</h3>
+        <h1>Sobre mí...</h1>
+        
+        <h3>Quién soy</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis atque ratione ut doloribus quod aliquid, delectus maiores, ducimus nisi sunt cumque vero distinctio illum dolore accusamus reiciendis! Voluptates, magnam placeat!</p>
-        <h3>Esto es un titulo h3</h3>
+        <h3>Estudios</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis atque ratione ut doloribus quod aliquid, delectus maiores, ducimus nisi sunt cumque vero distinctio illum dolore accusamus reiciendis! Voluptates, magnam placeat!</p>
       </div>
     </main>
 
     <footer>
-      <img class="logo" src="../images/logo.png" />
+      <img class="logo rotate-vert-center" src="../images/logo.png" />
       <div>
         <h3>Contacto</h3>
         <li>Instagram</li>
