--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -57,17 +57,23 @@
          </div>
       </div>
     </nav>
-    <main>
-      <div>
-        <img src="../images/terapeuta.webp">
-      </div>
-      <div>
-        <h1>Sobre mí...</h1>
-        
-        <h3>Quién soy</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis atque ratione ut doloribus quod aliquid, delectus maiores, ducimus nisi sunt cumque vero distinctio illum dolore accusamus reiciendis! Voluptates, magnam placeat!</p>
-        <h3>Estudios</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis atque ratione ut doloribus quod aliquid, delectus maiores, ducimus nisi sunt cumque vero distinctio illum dolore accusamus reiciendis! Voluptates, magnam placeat!</p>
+
+      <div class="grid4">
+        <div class="grid4__img">
+          <img src="../images/sobremi.jpeg" alt="SobreMi">
+        </div>
+
+        <div class="grid4__titulo">
+          <h1>Sobre mí...</h1>
+        </div>
+
+        <div class="grid4__texto1">
+
+        </div>
+
+        <div class="grid4__texto2">
+
+        </div>
       </div>
     </main>
 
